# agi-up

./: .gitignore  CMakeLists.txt  README.md  agi.c  agi.h  hybrid.c  hybrid.h  main.c  render.c  render.h
.github/workflows/: cmake-multi-platform.yml
docs/: pic-spec.txt
